[gd_scene load_steps=7 format=3 uid="uid://bn32h7ga7xtp0"]

[ext_resource type="Script" path="res://Scripts/Menus/settings.gd" id="1_6jx53"]
[ext_resource type="FontFile" uid="uid://b2nrwwb8gsbqu" path="res://_fonts/Banana Stick.otf" id="2_58cva"]
[ext_resource type="StyleBox" uid="uid://b3j5t3i5gl85u" path="res://Scripts/UI/orangebuttons.tres" id="2_67wt3"]
[ext_resource type="StyleBox" uid="uid://bh60l478xylq6" path="res://Scripts/UI/hover.tres" id="4_y3c5o"]
[ext_resource type="Script" path="res://Scripts/Menus/back.gd" id="5_t5b6c"]
[ext_resource type="AudioStream" uid="uid://cs7f63m5oghyl" path="res://Audio/Sound effects/button.wav" id="6_76lyt"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6jx53")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -245.0
offset_right = 166.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="Label4" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_58cva")
theme_override_font_sizes/font_size = 40
text = "resolution"

[node name="Resolutions" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "1920X1080"
popup/item_1/text = "1600X900"
popup/item_1/id = 1
popup/item_2/text = "1280X720"
popup/item_2/id = 2
popup/item_3/text = "2560X1440"
popup/item_3/id = 3

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_58cva")
theme_override_font_sizes/font_size = 40
text = "Volume"

[node name="Volume2" type="HSlider" parent="VBoxContainer2"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_58cva")
theme_override_font_sizes/font_size = 40
text = "SOund FX"

[node name="Volume3" type="HSlider" parent="VBoxContainer2"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_58cva")
theme_override_font_sizes/font_size = 40
text = "MUSIC"

[node name="Volume4" type="HSlider" parent="VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -223.0
offset_top = -151.0
offset_right = 232.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.686275, 0.945098, 1, 1)
theme_override_colors/font_focus_color = Color(0.686275, 0.945098, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_58cva")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("2_67wt3")
theme_override_styles/hover = ExtResource("4_y3c5o")
theme_override_styles/pressed = ExtResource("2_67wt3")
theme_override_styles/normal = ExtResource("2_67wt3")
text = "Back"
script = ExtResource("5_t5b6c")

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -251.0
offset_top = -192.0
offset_right = 252.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="CheckButton" type="CheckButton" parent="VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.686275, 0.945098, 1, 1)
theme_override_colors/font_focus_color = Color(0.686275, 0.945098, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_58cva")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("2_67wt3")
theme_override_styles/hover = ExtResource("4_y3c5o")
theme_override_styles/pressed = ExtResource("2_67wt3")
theme_override_styles/normal = ExtResource("2_67wt3")
text = "  FULLSCREEN"
icon_alignment = 1
expand_icon = true

[node name="button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_76lyt")

[connection signal="item_selected" from="VBoxContainer2/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="value_changed" from="VBoxContainer2/Volume2" to="." method="_on_volume_2_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/Volume3" to="." method="_on_volume_2_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/Volume4" to="." method="_on_volume_2_value_changed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="VBoxContainer/Back" method="_on_pressed"]
[connection signal="toggled" from="VBoxContainer3/CheckButton" to="." method="_on_check_button_toggled"]
